# jolc-backend

./: CMakeLists.txt  app.py
ArchivosEntrada/: ObjectosConArreglos.txt  ackerman.txt  arbolBinario.txt  arreglosObjetos.txt  arrelgo multiples.txt  avl.txt  expComplejas.txt  fibonacci.txt  listaEnlazada.txt  ordenamientoBurbuja.txt  variado.txt
ArchivosEntrada/Calificacion_fase1/: intermedio.jl
ArchivosEntrada/Pruebas_Fase2/: basicos.jl  todo.jl
src/: app.py  main.cpp  structs.h
src/Analizador/: entrada.txt  gramOptimizacion.py  grammar.py  parser.out  parsetab.py
src/Compilacion/: GenCod3d.py
src/Entidades/: Disco.cpp  Disco.h
src/Entorno/: Ambito.py  Simbolo.py  SimboloFuncion.py  SimboloStruct.py  SimboloVariable.py
src/Errores/: Error.py  TablaErrores.py
src/Expresion/: AccesoArreglo.py  AccesoStruct.py  Arreglo.py  AtomicExp.py  Expresion.py  OpAritemtica.py  OpLogica.py  OpRelacional.py  Rango.py  ResExp.py
src/Instruccion/: DecVar.py  Instruccion.py  ModificacionArreglo.py  Print.py  ResIns.py  ejecutarBloqueIns.py
src/Optimizacion/: Bloque.py  Optimizador.py  SentenciaC3d.py
src/Reportes/: Cst.py  TablaSimbolos.py
src/SentenciaHibrida/: LlamadaFuncStruct.py
src/Tipos/: TipoDato.py  TipoExpArtimetica.py  TipoExpLogica.py  TipoExpRelacional.py  TipoSimbolo.py
src/analizador/: parser.cpp  parser.h  parser.y  scanner.cpp  scanner.l
src/comandos/: Command.cpp  Command.h  Exec.cpp  Exec.h  Fdisk.cpp  Fdisk.h  Mkdir.cpp  Mkdir.h  Mkdisk.cpp  Mkdisk.h  Mkfs.cpp  Mkfs.h  Mount.cpp  Mount.h  Param.cpp  Param.h  Rep.cpp  Rep.h  Rmdisk.cpp  (+3 more)
(+59 files in other folders)
